Apply nav button (fix GUI bug on mobile)

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+ul{
+    list-style: none;
+}
 #button {
     display: inline-block;
     background-color: #FF9800;
